brat/test/golden/error/unmatched_bracket.brat.golden
Error in test/golden/error/unmatched_bracket.brat@FC {start = Pos {line = 1, col = 2}, end = Pos {line = 1, col = 3}}:
f(n, Vec([], n) -> Vec([], n) -- First bracket never closed
 ^

  File ended before this ( was closed

